<resources>
    <string name="app_name">CLIRNet</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_navigation">Home Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password"> Confirm Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Forget Password?</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_nav2">Nav2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_retailer_navigation">RetailerNavigationActivity</string>
    <string name="title_activity_register">Registration Page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search">Search Patient By Phone No.</string>
    <string name="synchronize">Synchoronize</string>
    <string name="help">Help</string>
    <string name="refresh">Refresh from server</string>
    <string-array name="language_group">
        <item>English</item>
        <item>Hindi</item>
        <item>Bengali </item>

    </string-array>
    <string name="title_activity_patient_update">Edit Patient Update</string>
    <string name="title_activity_edit_personal_info">Edit Personal Info</string>
    <string name="title_activity_add_patient_update">Add Patient Update</string>
    <string name="title_activity_show_personal_details">ShowPersonalDetailsActivity</string>
    <string name="title_activity_privacy">privacy</string>
    <string name="title_activity_privacy_policy">PrivacyPolicy</string>
    <string name="pohistory">Patient History</string>
    <string name="consultation_log">Consultation Log</string>
    <string name="patient_central">Patient Central</string>
    <string name="reports">Reports</string>
    <string name="change_password">Change Password !</string>
    <string name="to">To :</string>
    <string name="mob_no_notfound">Mobile Number Not Found!!!</string>
    <string name="mailid">support@clirnet.com</string>
    <string name="hash">#</string>
    <string name="logout">Logout</string>
    <string name="desc">profile_pic</string>
    <string name="subject">Subject :</string>
    <string name="message">Message :</string>
    <string name="send">Send</string>
    <string name="apikey">PFFt0436yjfn0945DevOp0958732Cons3214556</string>
    <string name="digits">android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digitsnumber">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789,</string>
    <string name="accept">Accept</string>
    <string name="lastweek">Last Week</string>
    <string name="lastmonth">Last Month</string>
    <string name="lastquarter">Last Quarter</string>
    <string name="quickview">Quick View</string>
</resources>