<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:padding="10dp"
            android:background="@drawable/copy">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"/>



        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="50dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:src="@drawable/concierge_suite"
            android:layout_weight="0.1"
            android:paddingRight="50dp"
            android:contentDescription="@string/desc"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="150dp"
            android:src="@drawable/knowledge_suite2"
            android:paddingLeft="50dp"
            android:contentDescription="@string/desc"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_social_person"
            android:padding="10dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:layout_gravity="center"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_action_lock"
            android:padding="10dp"
            android:paddingTop="15dp"

            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/ch_rememberme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:checked="true"
            android:text="Remember me"
            android:textColor="#fff"
            android:textSize="18sp"
            app:buttonTint="@color/white"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/white"
            android:layout_gravity="center"
            android:text="@string/btn_login"
            android:textColor="@color/input_register"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToForgetScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/btn_login"
            android:textStyle="bold"
            android:textSize="15sp" />
    </LinearLayout>

        <include layout="@layout/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
</LinearLayout>