<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ReportFragment"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/datelayout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"

        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/fromdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/rectangle_corner"
            android:drawableRight="@android:drawable/ic_menu_my_calendar"
            android:clickable="false"
            android:cursorVisible="false"

            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif"
            android:hint="From Date"
            android:inputType="date"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:targetApi="jelly_bean" />


        <EditText
            android:id="@+id/todate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/rectangle_corner"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableRight="@android:drawable/ic_menu_my_calendar"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif"
            android:hint="To Date"
            android:inputType="date"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:targetApi="jelly_bean" />
            <requestFocus />


            <ImageView
                android:id="@+id/filterDate"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:src="@drawable/filter"
                android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/datelayout"
        android:id="@+id/buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/quickview"
            android:paddingRight="3dp"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/bg_register"/>


        <Button
            android:id="@+id/lastweek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#50BAA0"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="@string/lastweek"
            android:textColor="#ffffff"
            android:textSize="16sp"
            tools:targetApi="jelly_bean"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/lastmonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#50BAA0"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="@string/lastmonth"
            android:textColor="#ffffff"
            android:textSize="16sp"
            tools:targetApi="jelly_bean"
            android:layout_margin="3dp" />


        <Button
            android:id="@+id/lastquarter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#50BAA0"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="@string/lastquarter"
            android:textColor="#ffffff"
            android:textSize="16sp"
            tools:targetApi="jelly_bean"
            android:layout_margin="3dp"/>

    </LinearLayout>

<!--
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_below="@+id/buttonlayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:visibility="gone"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_below="@+id/appBarLayout"
        android:visibility="gone"/>-->

    <FrameLayout
        android:layout_below="@+id/buttonlayout"
        android:id="@+id/framecontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>




</RelativeLayout>
